# cppVoiceFx

./: CMakeLists.txt  README.md  cmake_install.cmake
AudioFileIO/: cmake_install.cmake
AudioFileIO/MUSI6106.build/Debug/AudioFileIO.build/Objects-normal/arm64/: AudioFileIO.LinkFileList
AudioFileIO/sndlib/: cmake_install.cmake
AudioFileIO/sndlib/MUSI6106.build/Debug/sndlib.build/Objects-normal/arm64/: sndlib.LinkFileList
FastConvolution/: CMakeLists.txt  FastConv_TestCode.ipynb  README.md
FastConvolution/src/: MUSI6106Config.h.in  doxy.config.in
FastConvolution/src/AudioFileIO/: AudioFile.cpp  AudioFile.h  AudioFileIf.cpp  CMakeLists.txt
FastConvolution/src/CombFilter/: CMakeLists.txt  CombFilter.cpp  CombFilterIf.cpp
FastConvolution/src/FastConv/: CConvBase.cpp  CMakeLists.txt  FastConv.cpp
FastConvolution/src/Fft/: CMakeLists.txt  Fft.cpp
FastConvolution/src/MUSI6106Exec/: CMakeLists.txt  MUSI6106Exec.cpp
FastConvolution/src/Tests/TestExec/: CMakeLists.txt  Test.cpp
FastConvolution/src/Tests/Tests/: Test_AudioIO.cpp  Test_CombFilter.cpp  Test_FastConv.cpp  Test_Fft.cpp  Test_Vibrato.cpp
FastConvolution/src/Vibrato/: CMakeLists.txt  Vibrato.cpp
FastConvolution/src/inc/: AudioFileIf.h  CConvbase.h  CombFilter.h  CombFilterIf.h  FastConv.h  Fft.h  Lfo.h  RingBuffer.h  Synthesis.h  Util.h  Vector.h  Vibrato.h
FastConvolution/src/slide-examples/: Gnu_style.cpp  allman_style.cpp  api_readablecode.cpp  class.cpp  class2.cpp  class_order.cpp  comment.cpp  constcast.cpp  copy_constructor_1.cpp  copy_constructor_2.cpp  critical_section.cpp  critical_section_2.cpp  declaration.cpp  declaration_confusion.cpp  descriptive_variable_names.cpp  doublepointer.cpp  doxygen.cpp  dynamiccast.cpp  error.cpp  error2.cpp  functionargs.cpp  functionargsMain.cpp  helloworld.cpp  human_vs_compiler.cpp  implicitcast.cpp  indent_error.cpp  indent_kernel.cpp  indent_styles.cpp  loops.cpp  namespace.cpp  one_true_brace.cpp  operator_overloading.cpp  pointer.cpp  polymorphism.cpp  polymorphism_example.cpp  polymorphism_example_1.cpp  polymorphism_example_2.cpp  polymorphism_example_3.cpp  preproc1.cpp  preproc2.cpp  (+8 more)
MUSI6106Exec/: cmake_install.cmake
MUSI6106Exec/MUSI6106.build/Debug/MUSI6106Exec.build/Objects-normal/arm64/: MUSI6106Exec.LinkFileList
TestExec/: cmake_install.cmake
TestExec/MUSI6106.build/Debug/TestExec.build/Objects-normal/arm64/: TestExec.LinkFileList  Test_AudioIO.dia
Vibrato/: cmake_install.cmake
Vibrato/MUSI6106.build/Debug/Vibrato.build/Objects-normal/arm64/: Vibrato.LinkFileList
googletest/: CTestTestfile.cmake  cmake_install.cmake
googletest/CMakeScripts/: ReRunCMake.make
googletest/googletest/: CTestTestfile.cmake  cmake_install.cmake
googletest/googletest-distribution.xcodeproj/: project.pbxproj
googletest/googletest/CMakeScripts/: ReRunCMake.make
googletest/googletest/MUSI6106.build/Debug/gtest.build/Objects-normal/arm64/: gtestd.LinkFileList
googletest/googletest/MUSI6106.build/Debug/gtest_main.build/Objects-normal/arm64/: gtest_maind.LinkFileList
googletest/googletest/gtest.xcodeproj/: project.pbxproj
inc/: MUSI6106Config.h
src/: MUSI6106Config.h.in  doxy.config.in
src/AudioFileIO/: CMakeLists.txt
src/CombFilter/: CMakeLists.txt  CombFilter.cpp  CombFilterIf.cpp
src/MUSI6106Exec/: CMakeLists.txt  MUSI6106Exec.cpp
src/Tests/TestExec/: CMakeLists.txt
src/Tests/Tests/: Test_AudioIO.cpp  Test_Vibrato.cpp
src/Tremolo/: CMakeLists.txt  Tremolo.cpp
src/Vibrato/: CMakeLists.txt  Vibrato.cpp
src/VoicefxIn/: CMakeLists.txt  CVoicefxIf.cpp
src/inc/: CVoicefxIf.h  CombFilter.h  CombFilterIf.h  Lfo.h  RingBuffer.h  Synthesis.h  Tremolo.h  Vibrato.h
src/slide-examples/: Gnu_style.cpp  allman_style.cpp  api_readablecode.cpp  class.cpp  class2.cpp  class_order.cpp  comment.cpp  constcast.cpp  copy_constructor_1.cpp  copy_constructor_2.cpp  critical_section.cpp  critical_section_2.cpp  declaration.cpp  descriptive_variable_names.cpp  doublepointer.cpp  doxygen.cpp  dynamiccast.cpp  error.cpp  error2.cpp  functionargs.cpp  functionargsMain.cpp  helloworld.cpp  implicitcast.cpp  indent_error.cpp  indent_kernel.cpp  indent_styles.cpp  loops.cpp  namespace.cpp  one_true_brace.cpp  operator_overloading.cpp  pointer.cpp  polymorphism.cpp  polymorphism_example.cpp  polymorphism_example_1.cpp  polymorphism_example_2.cpp  polymorphism_example_3.cpp  preproc1.cpp  preproc2.cpp  preproc3.cpp  scope.cpp  (+6 more)
